# gaia

./: Cargo.toml  README.md  biome.json
.github/workflows/: actions-integration-tests.yml  api-integration-tests.yml  api-unit-tests.yml  ci.yml
.sqlx/: query-57703f2c9b977d3fe4c2010046461e49ae43ca0288d790a20abe26990a6b53f3.json  query-6e5daba5f53c139dbbaa2d586faf4ebc79e6aaa701a23e246b7692b008de3664.json  query-865736cd5b45524df295d2e58ef18d85d867a60e2546b4f41799000c26b955fa.json  query-ae8d7b0cdd3c444bbf71dd2c7d7972ac3549ac38d8eab23c70191df730d8e9e4.json  query-c428d6927cb7969c42d4e5f8ef5bb48155065e704a8c5f5bcb837aea15d11913.json  query-c43afb14b1142d19bc1ab6c0e5f86a139286301cce8af63838b92cbc7838203b.json  query-d73d52cde98c8c6983afb6a11807b502333290fb2dec091290e25b007fc25190.json
actions-indexer-repository/tests/: postgres_cursor.rs
api/: README-dataloaders.md  biome.json  main.ts  package.json  schema.graphql  tsconfig.json  vitest.config.ts
api/drizzle/: 0000_gigantic_randall.sql  (+6 more)
cache/: Cargo.toml
deployer/: 25omwWh6HYgeRQKCaSpVpa_ops.json  D8akqNQr8RMdCdFHecT2n_ops.json  LHDnAidYUSBJuvq7wDPRQZ_ops.json  README.md  academia.json  crypto-events.json  deployed.json  education.json  index.ts  industries.json  main.ts  package.json  regions.json  root.json  sf.json  technology.json
indexer/: Cargo.toml
indexer_utils/: Cargo.toml
ipfs/: Cargo.toml
postgraphile/: hono.ts  main.ts  package.json
wire/: Cargo.toml
wire/benches/: compression_bench.rs  json_bench.rs  protobuf_bench.rs
wire/src/: compression.rs  deserialize.rs  lib.rs  main.rs
(+76 files in other folders)
