[package]
name = "wire"
version = "0.1.0"
edition = "2024"

[lib]
name = "wire"
path = "src/lib.rs"

[dependencies]
zstd = "0.13.3"
prost = "0.13.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.141"
thiserror = "2.0.12"

[build-dependencies]
prost-build = "0.13.5"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "compression_bench"
harness = false

[[bench]]
name = "protobuf_bench"
harness = false

[[bench]]
name = "json_bench"
harness = false
